--- a/research/ml_train_model.ipynb
+++ b/research/ml_train_model.ipynb
@@ -258,16 +258,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['./extra_tress.joblib']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# save preprocessing object and RF algorithm\n",
     "joblib.dump(train_mode, \"./train_mode.joblib\", compress= True)\n",
     "joblib.dump(encoders, \"./encoders.joblib\", compress=True)\n",
     "joblib.dump(rf, \"./random_forest.joblib\", compress=True)\n",
-    "joblib.dump(et, \"./extra_\")"
+    "joblib.dump(et, \"./extra_tress.joblib\", compress=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
